--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     The output file location (full path) is <input id="calculated_output-file-path" type="text" size="80" disabled/>.
     <br>
     
-    <h2>Step 3: Save the filtergraph to file</h2>
+    <h2>Step 3: Save the filtergraph to a file</h2>
     Save the filtergraph text to: <b><span id="filtergraph_file-path" style="border: 1px solid black; padding: 0px 1px;">C:/Users/your-user-name-here/Desktop/Output/filtergraph.txt</span></b>
     <pre id="filtergraph">
 N/A
